--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -6,9 +6,11 @@ body {
   background-position: center; /* Center the background image */
 }
 
-.table{
-  background-color: #37b1f20c
+.table {
+  background-color: #37b1f20c;
+  border-radius: 0.625rem;
 }
+
 
 .btn-primary {
     background-color: blue; /* Change the background color */
