--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -184,3 +184,103 @@ body {
   font-weight: bold; /* Optionally set the font weight to bold */
   color: #ffffff; /* Set the desired text color */
 }
+
+
+
+.profileButton {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.profileIcon {
+  width: 24px;
+  height: 24px;
+  background-color: #333;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
+.dropdownContent {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.profileItem {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  text-align: left;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.profileItem:hover {
+  background-color: #ddd;
+}
+
+
+.menuStyle {
+  width: 250px !important;
+  height: 400px !important;
+  overflow: visible;
+  margin-top: 1px;
+  
+}
+
+.menuStyle .MuiPaper-root {
+  width: 230px !important; 
+  height: 250px !important; 
+  overflow: visible !important;
+  display: flex; 
+  flex-direction: column; 
+
+}
+
+
+.menuStyle .menuContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: calc(100% + 48px);
+}
+
+.menuStyle .MuiAvatar-root {
+  width: 58px;
+  height: 58px;
+  margin-left: 2px;
+  margin-right: 1px;
+}
+
+.dividerStyle {
+  width: 100%;
+}
+
+.menuStyle .menuContent > * {
+  margin-bottom: 8px;
+}
+
+.menuStyle .menuContent > *:hover {
+  text-decoration: none;
+  cursor: default;
+}
+
+.menuStyle .menuBackground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 27%;
+  background: #f6efb7;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+
