--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -278,7 +278,7 @@ body {
   left: 0;
   width: 100%;
   height: 27%;
-  background: #f6efb7;
+  background: #c8e6c9;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
