--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -128,12 +128,18 @@ body {
 }
 
 .upload-assigment-button {
-  background-color: rgb(36, 115, 211);
-  color:rgb(255, 255, 255);
-  font-weight: regular;
-  position: absolute; /* or 'fixed' or 'sticky' */
-  top: 12%;
-  right: 2%;
+  background-color: #fbfaf7;
+  color: #24425e;
+  font-family: "Ranua Trials";
+  font-weight: bold;
+  position: fixed; /* or 'sticky' */
+  top: 12px; /* Adjust the top value according to your navbar height */
+  right: 7.5%; /* Adjust the right value according to your layout */
+  z-index: 100; /* Set a z-index value to ensure it's above other elements */
+}
+
+.upload-assigment-button:hover {
+  background-color: #f5f5f5;
 }
 
 @font-face {
@@ -147,7 +153,7 @@ body {
 }
 
 #welcomeMessage {
-  color: rgb(36, 48, 94); /* Change the color */
+  color: #24305e; /* Change the color */
   font-family: "Ranua Trials";
   font-size: 16px; /* Change the font size to make it smaller */
   position: absolute; /* Position the text absolutely */
