--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -2,8 +2,8 @@
 
 body {
   background-image: url('../logo/a_6.jpg');
-  background-size: cover; /* Cover the entire background */
-  background-position: center; /* Center the background image */
+  background-size: cover; 
+  background-position: center; 
 }
 
 .table {
@@ -13,30 +13,30 @@ body {
 
 
 .btn-primary {
-    background-color: blue; /* Change the background color */
-    color: white; /* Change the text color */
-    padding: 10px 20px; /* Change the padding */
-    border: none; /* Remove the border */
-    border-radius: 5px; /* Add border radius for rounded corners */
-    cursor: pointer; /* Add cursor pointer */
+    background-color: blue; 
+    color: white; 
+    padding: 10px 20px; 
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer; 
 }
   
 .btn-primary:hover {
-    background-color: darkblue; /* Change the background color on hover */
+    background-color: darkblue; 
 }
   
 
 .signup-title {
   color: rgb(70, 148, 244);
   font-family: "Avenir LT Pro 85 Heavy", sans-serif;
-  font-size: 4em; /* Adjust this value to make the title bigger or smaller */
-  margin-top: +0px; /* Adjust this value to move the title higher or lower */
+  font-size: 4em; 
+  margin-top: +0px; 
 }
 
 .form-input {
-  color: black; /* This will change the text color to black */
-  background-color: white; /* This will change the background color to white */
-  border-color: rgb(211, 212, 212); /* Replace #yourColor with the color you want */
+  color: black; 
+  background-color: white; 
+  border-color: rgb(211, 212, 212);
 }
 
 .inputContainer {
@@ -44,7 +44,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  margin-bottom: 10px; /* Added margin-bottom */
+  margin-bottom: 10px; 
 }
 
 .inputContainer > .errorLabel {
@@ -53,7 +53,7 @@ body {
 }
 
 .inputBox {
-  box-sizing: border-box; /* Add this line */
+  box-sizing: border-box; 
   height: 48px;
   width: 400px;
   font-size: large;
@@ -70,20 +70,20 @@ body {
 }
 
 .inputButton {
-  display: block; /* Block level element */
-  margin: 0 auto; /* Center the button */
+  display: block; 
+  margin: 0 auto; 
   background-color: rgb(70, 148, 244);
-  color: white; /* White text color */
-  padding: 10px 20px; /* Padding for size */
-  border: none; /* No border */
-  border-radius: 50px; /* Large border radius for round corners */
-  cursor: pointer; /* Cursor pointer on hover */
-  text-align: center; /* Center the text */
+  color: white; 
+  padding: 10px 20px; 
+  border: none; 
+  border-radius: 50px; 
+  cursor: pointer; 
+  text-align: center; 
 }
 
 .clicked {
-    opacity: 0.3; /* Adjust the opacity value to make the button more transparent */
-    background-color: grey; /* Change the background color to grey */
+    opacity: 0.3; 
+    background-color: grey; 
 }
 
 .inputButton:hover {
@@ -99,8 +99,8 @@ body {
 
 .subtitle {
   color: gray;
-  font-size: 1.2em; /* Adjust size as needed */
-  text-align: center; /* Center align the text */
+  font-size: 1.2em; 
+  text-align: center; 
 }
 
 .mb-2 {
@@ -109,22 +109,22 @@ body {
 
 .logo {
   position: fixed;
-  top: 90px; /* Adjust the top position as needed */
-  left: 49.5%; /* Center the logo horizontally */
-  transform: translateX(-50%); /* Adjust to center the logo */
-  width: 100px; /* Adjust the width as needed */
-  height: auto; /* Automatically adjust height */
-  z-index: 1000; /* Set z-index to ensure it's above other elements */
+  top: 90px; 
+  left: 49.5%; 
+  transform: translateX(-50%); 
+  width: 100px;
+  height: auto; 
+  z-index: 1000; 
 }
 
 .dashboard-logo {
   position: fixed;
-  bottom: 5%; /* Adjust the bottom position as needed */
-  left: 5%; /* Center the logo horizontally */
-  transform: translateX(-50%); /* Adjust to center the logo */
-  width: 7%; /* Adjust the width as needed */
-  height: auto; /* Automatically adjust height */
-  z-index: 5%; /* Set z-index to ensure it's above other elements */
+  bottom: 5%; 
+  left: 5%; 
+  transform: translateX(-50%);
+  width: 7%; 
+  height: auto; 
+  z-index: 5%; 
 }
 
 .upload-assigment-button {
@@ -132,10 +132,12 @@ body {
   color: #24425e;
   font-family: "Ranua Trials";
   font-weight: bold;
-  position: fixed; /* or 'sticky' */
-  top: 12px; /* Adjust the top value according to your navbar height */
-  right: 7.5%; /* Adjust the right value according to your layout */
-  z-index: 100; /* Set a z-index value to ensure it's above other elements */
+  position: fixed; 
+  top: 12px; 
+  right: 7.5%;
+  z-index: 100; 
+  text-align: center; 
+  padding: 10px 20px; 
 }
 
 .upload-assigment-button:hover {
@@ -153,12 +155,12 @@ body {
 }
 
 #welcomeMessage {
-  color: #24305e; /* Change the color */
+  color: #24305e; 
   font-family: "Ranua Trials";
-  font-size: 16px; /* Change the font size to make it smaller */
-  position: absolute; /* Position the text absolutely */
-  bottom: 20%; /* Align the text to the bottom */
-  left: 11%; /* Center the text horizontally */
+  font-size: 16px; 
+  position: absolute; 
+  bottom: 20%; 
+  left: 11%; 
 }
 
 
@@ -172,7 +174,6 @@ body {
   url("https://db.onlinewebfonts.com/t/5bd42517ea0fe77ccfb4c74b7bc20fe5.svg#Ranua Trials")format("svg");
 }
 
-/* import font */
 @font-face {
   font-family: "Avenir LT Pro 85 Heavy";
   src: url("https://db.onlinewebfonts.com/t/79e4dc6a81171b1523795cb6b2bc7b2f.eot");
@@ -183,12 +184,12 @@ body {
        url("https://db.onlinewebfonts.com/t/79e4dc6a81171b1523795cb6b2bc7b2f.svg#Avenir LT Pro 85 Heavy") format("svg");
 }
 
-/* styles.css or your preferred stylesheet */
+
 #logo-text {
   font-family: "Avenir LT Pro 85 Heavy", sans-serif;
-  font-size: 36px; /* Set the desired font size */
-  font-weight: bold; /* Optionally set the font weight to bold */
-  color: #ffffff; /* Set the desired text color */
+  font-size: 36px;
+  font-weight: bold; 
+  color: #ffffff; 
 }
 
 
@@ -300,7 +301,7 @@ body {
 }
 
 .modal-content {
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: "Ranua Trials";
     font-weight: bold;
     background-color: #fbfbf8;
     border-radius: 10px;
@@ -320,6 +321,7 @@ body {
   width: 155px;
   border-radius: 5px;
   background-color: #e8f0fe;
+  font-family: "Ranua Trials";
   font-size: smaller;
   padding: 0;
   margin: 0;
@@ -331,11 +333,11 @@ body {
 .modal-content .inputButton {
   margin-top: 30px;
   background-color: rgb(70, 148, 244);
-  color: white; /* White text color */
-  padding: 10px 10px; /* Padding for size */
-  border-radius: 10px; /* Large border radius for round corners */
-  cursor: pointer; /* Cursor pointer on hover */
-  text-align: center; /* Center the text */
+  color: white; 
+  padding: 10px 10px; 
+  border-radius: 10px; 
+  cursor: pointer; 
+  text-align: center;
 }
 
 .modal-content .inputButton:hover {
